# ml-9_evaluation_selection

./: .gitignore  README.md  package-lock.json  profiling.py  pyproject.toml
src/evaluation_selection_project/: data.py  pipeline.py  train.py
tests/: test_train.py
