[tool.poetry]
name = "9_evaluation_selection-by-Andrei_Medvedev"
version = "0.1.0"
description = "9_evaluation_selection task by Andrei Medvedev"
authors = ["andreiok <andreiok@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"